css/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,  		  /* this is the beginning of the css reset */
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}                          				    /* this is the end of the css reset */



body {				                           /* this specifies the font size in the body */
  font-size: 14px;
}

nav {                         			             /* these are the default settings in the nav */
  background color: yellow;
  height: 100px;
  margin-top: -10px;
  position: fixed;
  width: 100%;
}

section {
  margin: 0 auto;
  width: 60%;
}

h1 {
  font-family: sans-serif;
  font-size: 2em;
}

.example, h3 {				                      /* both example and h3 have these attributes */
  padding-top: 30px;
  text-align: center;
}

h3 {							     /* h3 is different from example in that it has this attribute */
  font-size: 1.3em;
}

.element {		            		                  /* these are the deafult settings for the elements */
  background-color: green;
  height: 100px;
  margin: 10px 0;
  width: 100%;
}

.lastelement {				                    /* this changes the background color on the last three elements */
	background-color: blue;
}

